[gd_scene load_steps=31 format=2]

[ext_resource path="res://Battle/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle/Projectiles/Managers.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battle/AttackChoreography.tscn" type="PackedScene" id=3]
[ext_resource path="res://Battle/HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Battle/Arenas/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Battle/Arenas/Arena.gd" type="Script" id=6]
[ext_resource path="res://Battle/Arenas/Assets/Arena background.png" type="Texture" id=7]
[ext_resource path="res://Battle/Arenas/Assets/Brain/anti outer walls.png" type="Texture" id=8]
[ext_resource path="res://Battle/Arenas/Assets/background scroll.png" type="Texture" id=9]
[ext_resource path="res://Battle/Arenas/Assets/win background scroll.png" type="Texture" id=10]
[ext_resource path="res://Battle/Arenas/Assets/lose background scroll.png" type="Texture" id=11]
[ext_resource path="res://Battle/UI/Splash.tscn" type="PackedScene" id=12]
[ext_resource path="res://Battle/Arenas/Assets/Brain/background mask.png" type="Texture" id=13]
[ext_resource path="res://Battle/WallSprite.gd" type="Script" id=14]
[ext_resource path="res://Battle/Arenas/Assets/Brain/outer walls.png" type="Texture" id=15]
[ext_resource path="res://Battle/Fights/fight1.tres" type="Resource" id=16]
[ext_resource path="res://Battle/Arenas/InnerWalls.gd" type="Script" id=17]
[ext_resource path="res://Music/MusicPlayer.tscn" type="PackedScene" id=18]
[ext_resource path="res://Battle/EnemyObjects/EnemyObjects.gd" type="Script" id=19]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float speed = 1.;
uniform vec2 direction = vec2(1.);
uniform sampler2D tex;
uniform vec2 rect_size;

void fragment(){
	vec2 coord = UV;
	vec2 size = vec2(textureSize(tex, 0));
	coord = mod(round(coord*rect_size), size)/size;
	coord += TIME*speed*direction/length(direction);
	COLOR = texture(tex, coord);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/speed = 1.0
shader_param/direction = Vector2( 1, 1 )
shader_param/rect_size = Vector2( 2000, 1000 )
shader_param/tex = ExtResource( 9 )

[sub_resource type="GDScript" id=3]
script/source = "extends ColorRect


export(StreamTexture) var win
export(StreamTexture) var lose
export(StreamTexture) var battle

func _ready() -> void:
	material.set(\"shader_param/tex\", battle)

func lost():
	material.set(\"shader_param/tex\", lose)

func won():
	material.set(\"shader_param/tex\", win)
"

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment(){
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
	if (length(COLOR) == 2.){
		COLOR = texture(TEXTURE, UV);
	}
}
"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="TileSet" id=6]
0/name = "Arena background.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 50, 50 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "gimmick",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "gimmick",
"speed": 5.0
} ]

[sub_resource type="PhysicsMaterial" id=10]
friction = 0.0

[sub_resource type="PhysicsMaterial" id=11]

[node name="Arena" type="Node2D"]
script = ExtResource( 6 )
Village = "res://Overworld/Villages/Brain.tscn"

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="Scroll" type="ColorRect" parent="BG"]
visible = false
material = SubResource( 2 )
margin_right = 2000.0
margin_bottom = 1000.0
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
win = ExtResource( 10 )
lose = ExtResource( 11 )
battle = ExtResource( 9 )

[node name="HUDControls" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUDControls" instance=ExtResource( 4 )]

[node name="Splash" parent="." instance=ExtResource( 12 )]

[node name="Organ" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="TileMap" parent="Organ"]
material = SubResource( 5 )
tile_set = SubResource( 6 )
cell_size = Vector2( 50, 50 )
format = 1
tile_data = PoolIntArray( -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -393224, 0, 0, -393223, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -262153, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -131082, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 589820, 0, 0 )

[node name="BGMap" type="AnimatedSprite" parent="Organ/BG"]
show_behind_parent = true
frames = SubResource( 7 )

[node name="Silloutte" type="AnimatedSprite" parent="Organ"]
frames = SubResource( 8 )

[node name="Contour" type="AnimatedSprite" parent="Organ"]
frames = SubResource( 9 )
script = ExtResource( 14 )
background = ExtResource( 8 )

[node name="Walls" type="StaticBody2D" parent="Organ/Contour"]
collision_mask = 0
physics_material_override = SubResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Organ/Contour/Walls"]

[node name="InnerWalls" type="Sprite" parent="Organ"]
script = ExtResource( 17 )

[node name="Walls" type="StaticBody2D" parent="Organ/InnerWalls"]
physics_material_override = SubResource( 11 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -305, 62 )

[node name="Camera" parent="." instance=ExtResource( 5 )]

[node name="ProjectileManagers" parent="." instance=ExtResource( 2 )]

[node name="AttackChoreography" parent="." instance=ExtResource( 3 )]
choreography_steps = ExtResource( 16 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="EnemyObjects" type="Node2D" parent="."]
script = ExtResource( 19 )

[connection signal="change_scene" from="Splash" to="." method="_on_Splash_change_scene"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="hp_changed" from="Player" to="HUDControls/HUD" method="_on_Player_hp_changed"]
[connection signal="hurt" from="Player" to="Camera" method="_on_Player_hurt"]
[connection signal="hurt" from="Player" to="HUDControls/HUD" method="_on_Player_hurt"]
[connection signal="fight_over" from="AttackChoreography" to="." method="_on_AttackChoreography_fight_over"]
[connection signal="script_loaded" from="AttackChoreography" to="HUDControls/HUD" method="_on_AttackChoreography_script_loaded"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[editable path="ProjectileManagers"]
